<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    tools:context="com.example.javier.adivinadado.RealizaJuego">

    <TextView
        android:id="@+id/txvPresentacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/sPresentacion"
        android:textColor="@color/letra"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/txvIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sIntentos"
        android:textColor="@color/letra"

        android:textSize="30dp"
        android:layout_above="@+id/etIntroduce"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp" />

    <Button
        android:id="@+id/btnAccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:onClick="onClick"
        android:text="@string/sBtnAccion"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tvNombre" />

    <EditText
        android:id="@+id/etIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAccion"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="@string/sHint"
        android:textColorHint="@color/letra"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HOLA"
        android:textSize="30dp"
    android:textColor="@color/letra"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
